--- a/less/footer.less
+++ b/less/footer.less
@@ -1,4 +1,38 @@
 footer {
     background-color: #828282;
+    color: #FFFFFF;
+    padding: 5%;
+    padding-bottom: 1%;
+}
+
+.footer-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding-bottom: 4%;
+
+}
+
+.email {
+    border: 1px solid white;
+    border-radius: 5px;
+    height: 40px;
+    color: #828282;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    padding: 2%;
+
+}
+
+.locations p {
+    font-size: 1.4rem;
+    line-height: 26px;
     
+}
+
+h4 {
+    display: flex;
+    justify-content: center;
+    font-size: 1.4rem;
 }
