--- a/less/global.less
+++ b/less/global.less
@@ -6,8 +6,7 @@
   }
   html, body {
     font-family: 'Roboto', 'Arial', sans-serif;
-    background: #FFFFFF;
-    color: #222222
+    background: black;
   }
   
   .container {
@@ -15,8 +14,9 @@
     width: 100%;
     margin: 0px auto;
     font-size: 1.6rem;
-    padding: 5px;
     line-height: 24px;
+    background: white;
+    color: black;
 
   }
 
