--- a/less/home-page.less
+++ b/less/home-page.less
@@ -69,6 +69,10 @@ flex-direction: row-reverse;
    margin-top: 50px;
 }
 
+.view1, .view2 {
+    width: 100%;
+}
+
 .btn2 {
     height: 40px;
     border: 1px solid #222222;
@@ -79,13 +83,19 @@ flex-direction: row-reverse;
     margin-top: 20px;
 }
 
-.middle-content p, .mid-content p, .bottom-content p {
+.middle-content p {
     width: 100%;
-    padding: 10% 41% 10% 20%;
+    padding: 1% 31% 10% 30%;
+}
+
+.mid-content p, .bottom-content p {
+    width: 100%;
+    padding: 10% 31% 5% 30%;
 }
 
 .middle-image, .mid-content, .bottom-content {
     position: relative;
+    padding: 0px 80px 60px 80px;
 }
 
 .btn3, .btn4 {
@@ -100,7 +110,7 @@ flex-direction: row-reverse;
     height: 90px;
     align-items: center;
     font-size: 3.0rem;
-    bottom: -9%;
+    bottom: 8%;
     border: 1px solid #FFFFFF
 }
 
@@ -110,5 +120,5 @@ flex-direction: row-reverse;
 }
 
 .position {
-    bottom: 64%;
+    bottom: 65%;
 }
